# shareholders

./: .gitignore  .ocp-indent  Makefile  README.md  TODO.md  dune  dune-project  shareholders.opam
examples/: dune  example_001.expected  example_001.ml
lib/: dune  encoding.ml  encryption.ml  entropy.ml  hashing.ml  helpers.ml  reasons.ml  recovering.ml  shareholders.ml  shareholders.mli  sharing.ml
test/spec/: dune  helpers.ml  recovering.ml  sharing.ml  spec.ml  verification.ml
