opam-version: "2.0"
name: "shareholders"
version: "0.0.1"
synopsis: "Secret Sharing/Splitting tool for OCaml"
description: """
A Secret Sharing algorithm based on XOR and with custom thresholds
from 50% of shares up to 100% (all shares as keys needed).
"""
maintainer: "Marco Aurélio da Silva <marcoonroad@gmail.com>"
authors: "Marco Aurélio da Silva <marcoonroad@gmail.com>"
license: "MIT"
homepage: "https://marcoonroad.dev/shareholders"
bug-reports: "https://github.com/marcoonroad/shareholders/issues"
dev-repo: "git+https://github.com/marcoonroad/shareholders.git"
depends: [
  "dune" {build & >= "1.9.1"}
  "core" {>= "v0.11.3"}
  "digestif" {>= "0.7.1"}
  "nocrypto" {>= "0.5.4"}
  "hex" {>= "1.2.0"}
  "bisect_ppx" {build & >= "1.3.0"}
  "alcotest" {test}
  "re" {test & >= "1.7.3"}
]
build: ["dune" "build" "-p" name]
